advanced_cnc_copilot/bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: advanced-cnc-copilot
    labels:
        com.docker.compose.project: advanced_cnc_copilot
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: advanced_cnc_copilot
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: advanced_cnc_copilot
                com.docker.compose.service: backend
                com.docker.compose.network.rise_network: "true"
        spec:
            containers:
                - name: rise-backend
                  image: advanced_cnc_copilot-backend
                  imagePullPolicy: IfNotPresent
                  args:
                    - uvicorn
                    - backend.main:app
                    - --host
                    - 0.0.0.0
                    - --port
                    - 8000
                    - --reload
                  ports:
                    - name: backend-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app
                      mountPath: /app
            volumes:
                - name: app
                  hostPath:
                    path: C:\Users\dusan\Documents\GitHub\Dev-contitional\advanced_cnc_copilot
