advanced_cnc_copilot/bridge/base/flower-deployment.yaml
#! flower-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: flower
    namespace: advanced-cnc-copilot
    labels:
        com.docker.compose.project: advanced_cnc_copilot
        com.docker.compose.service: flower
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: advanced_cnc_copilot
            com.docker.compose.service: flower
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: advanced_cnc_copilot
                com.docker.compose.service: flower
                com.docker.compose.network.rise_network: "true"
        spec:
            containers:
                - name: rise-flower
                  image: mher/flower
                  imagePullPolicy: IfNotPresent
                  args:
                    - celery
                    - flower
                  ports:
                    - name: flower-5555
                      containerPort: 5555
