advanced_cnc_copilot/bridge/base/redis-deployment.yaml
#! redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: advanced-cnc-copilot
    labels:
        com.docker.compose.project: advanced_cnc_copilot
        com.docker.compose.service: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: advanced_cnc_copilot
            com.docker.compose.service: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: advanced_cnc_copilot
                com.docker.compose.service: redis
                com.docker.compose.network.rise_network: "true"
        spec:
            containers:
                - name: rise-redis
                  image: redis:7-alpine
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: [redis-cli ping]
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: redis-6379
                      containerPort: 6379
